Update Valentine's message to Priya

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ img{
   <p>
   “तू मेरी आज भी है,<br>
   तू मेरी कल भी रहेगी।”<br><br>
-  Happy Valentine’s Day Priya ❤️<br>
+  Priya ❤️<br>
   — Samarth
   </p>
   <img src="priya_samarth_photo.jpg" alt="Our Moment">
